--- a/templates/settings.html
+++ b/templates/settings.html
@@ -1,8 +1,10 @@
 {% extends "layout.html" %}
 {% block content %}
 <div class="mdc-card page-card">
+  <header class="card-header">
+    <p class="card-header-title">Settings</p>
+  </header>
   <div class="card-content">
-    <h2 class="title is-4 mb-4">Settings</h2>
     <nav class="buttons tab-buttons mb-4" id="settingsTabs">
       <button type="button" class="mdc-button mdc-button--raised is-active" data-target="generalSettings">General</button>
       <button type="button" class="mdc-button mdc-button--raised" data-target="exportSettings">Export</button>
@@ -26,13 +28,15 @@
         {% endif %}
         <input class="input" type="file" name="logo" accept="image/*">
       </div>
-      <div class="field mb-4">
-        <label class="label">Primary color</label>
-        <input class="input" type="color" name="primary_color" value="{{ primary_color }}">
-      </div>
-      <div class="field mb-4">
-        <label class="label">Highlight color</label>
-        <input class="input" type="color" name="highlight_color" value="{{ highlight_color }}">
+      <div class="columns">
+        <div class="column field mb-4">
+          <label class="label">Primary color</label>
+          <input class="input" type="color" name="primary_color" value="{{ primary_color }}">
+        </div>
+        <div class="column field mb-4">
+          <label class="label">Highlight color</label>
+          <input class="input" type="color" name="highlight_color" value="{{ highlight_color }}">
+        </div>
       </div>
       <div class="field mb-4">
         <label class="label">Default month for exports</label>
@@ -47,28 +51,28 @@
       </div>
       <h3 class="title is-5">Monthly reports</h3>
       <div class="field mb-4">
-        <label class="checkbox">
-          <input type="checkbox" name="include_month_summary" {% if include_month_summary %}checked{% endif %}>
-          Last full month by sales type
+        <label class="switch-label">
+          <input type="checkbox" class="switch" name="include_month_summary" {% if include_month_summary %}checked{% endif %}>
+          <span>Last full month by sales type</span>
         </label>
       </div>
       <div class="field mb-4">
-        <label class="checkbox">
-          <input type="checkbox" name="include_month_details" {% if include_month_details %}checked{% endif %}>
-          Detailed by type
+        <label class="switch-label">
+          <input type="checkbox" class="switch" name="include_month_details" {% if include_month_details %}checked{% endif %}>
+          <span>Detailed by type</span>
         </label>
       </div>
       <h3 class="title is-5 mt-4">Yearly reports</h3>
       <div class="field mb-4">
-        <label class="checkbox">
-          <input type="checkbox" name="include_year_overall" {% if include_year_overall %}checked{% endif %}>
-          Overall sales by month
+        <label class="switch-label">
+          <input type="checkbox" class="switch" name="include_year_overall" {% if include_year_overall %}checked{% endif %}>
+          <span>Overall sales by month</span>
         </label>
       </div>
       <div class="field mb-4">
-        <label class="checkbox">
-          <input type="checkbox" name="include_year_summary" {% if include_year_summary %}checked{% endif %}>
-          Yearly summary by type
+        <label class="switch-label">
+          <input type="checkbox" class="switch" name="include_year_summary" {% if include_year_summary %}checked{% endif %}>
+          <span>Yearly summary by type</span>
         </label>
       </div>
     </div>
