--- a/templates/report_pdf.html
+++ b/templates/report_pdf.html
@@ -183,9 +183,9 @@
     <tbody>
     {% for row in shopify_rows %}
       <tr>
-        <td>{{ row.month }}</td>
-        {% for val in row.values %}<td class="has-text-right">${{ "%.2f"|format(val) }}</td>{% endfor %}
-        <td class="has-text-right">${{ "%.2f"|format(row.avg) }}</td>
+        <td>{{ row['month'] }}</td>
+        {% for val in row['values'] %}<td class="has-text-right">${{ "%.2f"|format(val) }}</td>{% endfor %}
+        <td class="has-text-right">${{ "%.2f"|format(row['avg']) }}</td>
       </tr>
     {% endfor %}
       <tr class="has-background-light has-text-weight-bold">
@@ -208,9 +208,9 @@
     <tbody>
     {% for row in shopify_quarters %}
       <tr>
-        <td>{{ row.quarter }}</td>
-        {% for val in row.values %}<td class="has-text-right">${{ "%.2f"|format(val) }}</td>{% endfor %}
-        <td class="has-text-right">${{ "%.2f"|format(row.avg) }}</td>
+        <td>{{ row['quarter'] }}</td>
+        {% for val in row['values'] %}<td class="has-text-right">${{ "%.2f"|format(val) }}</td>{% endfor %}
+        <td class="has-text-right">${{ "%.2f"|format(row['avg']) }}</td>
       </tr>
     {% endfor %}
     </tbody>
