--- a/templates/export_form.html
+++ b/templates/export_form.html
@@ -55,6 +55,12 @@
           <span>Yearly summary by type</span>
         </label>
       </div>
+      <div class="field mb-4">
+        <label class="switch-label">
+          <input type="checkbox" class="switch" name="include_shopify" {% if include_shopify %}checked{% endif %}>
+          <span>Shopify income tables</span>
+        </label>
+      </div>
       <div class="field">
         <button type="submit" class="mdc-button mdc-button--raised">Export</button>
       </div>
