--- a/templates/report.html
+++ b/templates/report.html
@@ -190,22 +190,26 @@
         <thead>
           <tr>
             <th>Month</th>
-            {% for y in shopify_years %}<th>{{ y }} $</th>{% endfor %}
             <th>Average $</th>
+            {% for y in shopify_years %}<th>{{ y }} $</th>{% endfor %}
           </tr>
         </thead>
         <tbody>
           {% for row in shopify_rows %}
           <tr>
             <td>{{ row['month'] }}</td>
-            {% for val in row['values'] %}<td>${{ "%.2f"|format(val) }}</td>{% endfor %}
             <td>${{ "%.2f"|format(row['avg']) }}</td>
+            {% for val in row['values'] %}
+            <td>{{ ("$%.2f"|format(val.val)) | trend(val.diff) }}</td>
+            {% endfor %}
           </tr>
           {% endfor %}
           <tr class="has-background-light has-text-weight-bold">
             <td>Total</td>
-            {% for t in shopify_totals %}<td>${{ "%.2f"|format(t) }}</td>{% endfor %}
             <td>${{ "%.2f"|format(shopify_avg_total) }}</td>
+            {% for t in shopify_totals %}
+            <td>{{ ("$%.2f"|format(t.val)) | trend(t.diff) }}</td>
+            {% endfor %}
           </tr>
         </tbody>
       </table>
@@ -217,16 +221,18 @@
         <thead>
           <tr>
             <th>Quarter</th>
-            {% for y in shopify_years %}<th>{{ y }} $</th>{% endfor %}
             <th>Average $</th>
+            {% for y in shopify_years %}<th>{{ y }} $</th>{% endfor %}
           </tr>
         </thead>
         <tbody>
           {% for row in shopify_quarters %}
           <tr>
             <td>{{ row['quarter'] }}</td>
-            {% for val in row['values'] %}<td>${{ "%.2f"|format(val) }}</td>{% endfor %}
             <td>${{ "%.2f"|format(row['avg']) }}</td>
+            {% for val in row['values'] %}
+            <td>{{ ("$%.2f"|format(val.val)) | trend(val.diff) }}</td>
+            {% endfor %}
           </tr>
           {% endfor %}
         </tbody>
