--- a/templates/settings.html
+++ b/templates/settings.html
@@ -62,6 +62,17 @@
           <span>Detailed by type</span>
         </label>
       </div>
+      <div class="field mb-4">
+        <label class="label">Types for details</label>
+        <div>
+          {% for cat in categories %}
+          <label class="switch-label mr-2 mt-1">
+            <input type="checkbox" class="switch" name="detail_types" value="{{ cat }}" {% if cat in detail_types %}checked{% endif %}>
+            <span>{{ labels[cat] }}</span>
+          </label>
+          {% endfor %}
+        </div>
+      </div>
       <h3 class="title is-5 mt-4">Yearly reports</h3>
       <div class="field mb-4">
         <label class="switch-label">
