--- a/templates/settings.html
+++ b/templates/settings.html
@@ -11,6 +11,16 @@
     </nav>
     <form method="post" enctype="multipart/form-data">
     <div id="generalSettings" class="tab-pane">
+      <div class="field mb-4">
+        <label class="label">Application title</label>
+        <input class="input" type="text" name="app_title" value="{{ app_title }}">
+      </div>
+      <div class="field mb-4">
+        <label class="switch-label">
+          <input type="checkbox" class="switch" name="dark_mode" {% if dark_mode %}checked{% endif %}>
+          <span>Use dark theme by default</span>
+        </label>
+      </div>
     </div>
     <div id="exportSettings" class="tab-pane is-hidden">
       <div class="field mb-4">
@@ -19,6 +29,14 @@
         <img src="{{ url_for('branding_logo') }}" alt="logo" style="max-height:3rem;" class="mb-2">
         {% endif %}
         <input class="input" type="file" name="logo" accept="image/*">
+      </div>
+      <div class="field mb-4">
+        <label class="label">Report title</label>
+        <input class="input" type="text" name="report_title" value="{{ report_title }}">
+      </div>
+      <div class="field mb-4">
+        <label class="label">Branding text</label>
+        <input class="input" type="text" name="branding" value="{{ branding }}">
       </div>
       <div class="columns">
         <div class="column field mb-4">
