Make SKU type bold in merged tab

--- a/templates/sku_map.html
+++ b/templates/sku_map.html
@@ -140,7 +140,7 @@
             <div class="column is-narrow">
               <div class="field is-flex is-align-items-center">
                 <label class="label mb-0 mr-1">Type</label>
-                <span>{{ entry.type }}</span>
+                <strong>{{ entry.type }}</strong>
               </div>
             </div>
           </div>
