Fix PDF export image size and open in new window

--- a/templates/export_form.html
+++ b/templates/export_form.html
@@ -5,7 +5,7 @@
     <p class="card-header-title">Export PDF</p>
   </header>
   <div class="card-content">
-    <form method="post">
+    <form method="post" target="_blank">
       <div class="columns">
         <div class="column field mb-4">
           <label class="label">Select year:</label>
