--- a/templates/report_pdf.html
+++ b/templates/report_pdf.html
@@ -93,7 +93,7 @@
     </tbody>
   </table>
   <div class="page-break"></div>
-  <img src="data:image/png;base64,{{ last_month_chart }}" alt="Last Month Chart" width="100%">
+  <img src="data:image/png;base64,{{ last_month_chart }}" alt="Last Month Chart" width="780">
   {% if include_month_details and has_month_details or include_year_overall or include_year_summary %}
   <div class="page-break"></div>
   {% endif %}
@@ -152,7 +152,7 @@
     </tbody>
   </table>
   <div class="page-break"></div>
-  <img src="data:image/png;base64,{{ year_chart }}" alt="Year Chart" width="100%">
+  <img src="data:image/png;base64,{{ year_chart }}" alt="Year Chart" width="780">
   <div class="page-break"></div>
 
   <h3 class="mt-4">Quarterly income</h3>
